# kuminz-re

./: .gitignore  CLAUDE.md  README.md  ecu_identification.md
calterm3/: _logFile.txt  cc516.lic
calterm3/Calterm/: AutomaticConnection.con  BaseLib.lib  BootConfig.e2m  Calterm.config.xml  Calterm.config.xml.bak  Calterm.exe.config  Calterm4.chw  CaltermCLI.exe.manifest  CaltermIII.chm  DataLinkSettings.xml  ErrorRepository.mdb  MultiCompareUI.exe.manifest  WindowLayout.xml  domobj.tlb  j1939.cbf
calterm3/Calterm III/: CL.317  Calterm.exe.config  CaltermCLI.exe.config  CaltermCLIHelp.txt  Error and Troubleshooting Guide.chm  SegmentInitializer.asr.xml
calterm3/Calterm III.rep/: project.prp  projectState
calterm3/calterm-crc/: CLAUDE.md  ECU_PROGRAMMING_PROTOCOL.md  REVERSE_ENGINEERING_NOTES.md  calterm-crc  crc.cpp
clip-core/: CMakeLists.txt
clip-core/include/clip/: CLIPInstructionBuilder.h  CLIPSessionManager.h  CLIPTransportLayer.h  ECUReader.h  J1939TransportProtocol.h  SecurityAuth.h  ServiceScanner.h  SocketCanAdapter.h
clip-core/include/clip/types/: EClipCommand.h  TClipPacket.h
clip-core/src/: CLIPInstructionBuilder.cpp  CLIPSessionManager.cpp  CLIPTransportLayer.cpp  ECUReader.cpp  J1939MessageBuilder.cpp  SecurityAuth.cpp  ServiceScanner.cpp  SocketCanAdapter.cpp
clip-lib/: CMakeLists.txt
clip-lib/src/can/: ICanAdapter.h  SocketCanAdapter.cpp  SocketCanAdapter.h
clip-lib/src/cli/: main.cpp
clip-lib/src/clip/: Frame.h
clip-lib/src/j1939/: J1939.h  J1939TP.h
docs/: cross-firmware-analysis.md  security_annotations.csv
e2m-analysis/: .eslintrc.json  CLAUDE.md  README.md  base_addresses_complete.md  generate_base_address_docs.ts  package-lock.json  package.json  tsconfig.json  unique_parameter_names.txt
e2m-analysis/CHR/: CHR_B2_11.52.08.72.e2m  CHR_B2_11.61.08.05.e2m  CHR_B2_11.62.07.12.e2m  CHR_B2_11.71.06.02.e2m  CHR_B2_11.71.08.06.e2m  CHR_B2_11.72.06.04.e2m  CHR_B2_11.72.08.09.e2m  CHR_CC_11.10.22.00.e2m  CHR_CC_11.10.23.02.e2m  CHR_CC_11.10.23.03.e2m  CHR_CC_11.10.24.00.e2m  CHR_CC_11.12.08.03.e2m  CHR_CC_11.12.09.00.e2m  CHR_CC_11.15.08.04.e2m  CHR_CC_11.15.08.06.e2m  CHR_CC_11.20.13.16.e2m  CHR_CC_11.25.05.07.e2m  CHR_CC_11.35.24.02.e2m  CHR_CC_11.35.24.09.e2m  CHR_CC_11.35.26.01.e2m  CHR_CC_11.45.01.07.e2m  CHR_CC_11.45.02.01.e2m  CHR_CC_11.60.01.01.e2m
e2m-analysis/docs/: chr_reliable_memory_addresses.csv  column16_enums.md  column3_base_address_lookup.md  column7_access_control.md  column7_analysis.md  column_stats.md  common_lines.e2m  crc_analysis.md  crc_test_plan.md  groups.md  headers_analysis.md  memory_addresses.md  unique_lines.e2m
e2m-analysis/originals/: 44t9.e2m  74be73.e2m  74be77.e2m  74c0.e2m  74t5.e2m  74t6.e2m  84t0.e2m  Isbp400.e2m  v55t16_s.e2m  v57t6_x.e2m
e2m-analysis/src/: database-explorer.ts  formula-breakthrough.ts  index.ts
e2m-analysis/test_files/: test1_remove_last.e2m  test2_remove_first.e2m  test3_duplicate_first.e2m  test4_modify_col15.e2m  test5_empty.e2m  testing_instructions.md
e2m-db/: 64t6.csv  create-e2m-table.sql  create-param-names-table.ts  debug-db.ts  import-e2m-files.ts  import-e2m.ts  import-param-names.ts  package-lock.json  package.json  test-e2m-db.ts  tsconfig.json  unique_parameter_names.txt  unique_remaining_params.csv  verify-param-names.ts
e2m-db/originals/: 00V2.e2m  63c5.e2m  63t10r4.e2m  63t5.e2m  64c6.e2m  64t4.e2m  64t6.e2m  74be62rls.e2m  74be73r1.e2m  74be81.e2m  74be84.e2m  74c5.e2m  74c6.e2m  74te3rls.e2m  74te5rls.e2m  V59t8_t.e2m  v59t5_t.e2m  v63t5_s.e2m  v74t3_t.e2m
firmware/: CLAUDE.md  feature_comparison.csv
firmware/1999_dodge_prototype/: README.md
firmware/CM848_100902_analysis/: README.md
firmware/J90270.06_T300/: README.md
firmware/J90280.05_analysis/: .gitignore.temp  CLAUDE.md  (+12 more)
insite9/: ActivityLogAPI.tlb  AddInFactoryAPI.tlb  AddInFactoryEvents.tlb  AppAPI.tlb  AuditTrail_EN.xml  CalSelEvents.tlb  CalibrationSelectionUserSettings.xml  CertificationCodes.xml  Collection.tlb  ColumnTranslations_EN.xml  ConManAPI.tlb  ConManEvents.tlb  ConfigServiceAPI.tlb  Cummins.INSITE.AddIns.FeaturesAndParameters.tlb  Cummins.INSITE.CNL.CURE.tlb  Cummins.INSITE.CNL.GraphicalMonitoring.tlb  Cummins.INSITE.Kernel.ECMServicesAPI.tlb  DataMonitorLoggerAPI.tlb  DataRetrieval_license_EN.rtf  DropDownColorControl.ocx  DropDownColorControl.ocx.manifest  ECMPC.avi  ECMPropertyPageAPI.tlb  ECMServicesAPI.tlb  ECMServicesConfiguration.xml  ECMServicesEvents.tlb  ECMTestAPI.tlb  EngineProtectionEvents.tlb  EngineTorqueEvents.tlb  FIRSTRuleFileManager.tlb  FaultsInfo_EN.xml  FaultsInformationEvents.tlb  GenericDiagnosticTest.tlb  GroupHistory.xml  InfoServiceAPI.tlb  InfoServiceEvents.tlb  Insite.tlb  J1939CtrlHistoryEvents.tlb  KSPAPI.tlb  LOGGER.avi  (+35 more)
kuminz-cli/: CMakeLists.txt
kuminz-cli/src/: main.cpp
kuminz-ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
kuminz-ui/src/can/: CanDeviceManager.cpp  CanDeviceManager.h  SocketCanAdapter.cpp  SocketCanAdapter.h
kuminz-ui/src/clip/: CLIPInstructionBuilder.cpp  CLIPSessionManager.cpp  CLIPTransportLayer.cpp  CLIPTransportLayer.h  ECUReader.cpp  ECUReader.h  J1939MessageBuilder.cpp  J1939MessageBuilder.h
kuminz-ui/src/clip/types/: EClipCommand.h  ESessionState.h  TClipPacket.h
kuminz-ui/src/types/: ICanAdapter.h
kuminz-ui/src/ui/types/: EAdapterState.h  EAdapterType.h  EConnectionState.h  TCanDevice.h  TConnectionSettings.h
kuminz-ui/src/ui/widgets/: ConnectionWidget.cpp  ConnectionWidget.h  StatusBarWidget.cpp  StatusBarWidget.h
work/: next-session-plan.md  todo.md
(+1526 files in other folders)
